syntax = "proto3";

package com.book;

option java_package = "com.proto.textProcessor";
option java_multiple_files = true;

message Book {
    int32 book_id = 1;
    string title = 2;
    float price = 3;
    int32 page = 4;
    int32 author_id = 5;
}

message Author {
    int32 author_id = 1;
    string first_name = 2;
    string last_name = 3;
    string gender = 4;
    int32 book_id = 5;
}

service BookAuthorService{
    rpc getAuthor(Author) returns(Author){}
}